@@ -40,6 +40,7 @@ Changelog for getTables.
 - Загрузить переименовать в Фильтр-список.
 - Исправлен импорт excel файла.
 - get-autocomplect-content get-table-autosave.
+- if(empty($subtable['pdoTools']['class']))
 
 1.11.4-alpha
 - Адаптация под modx3(3.0.1) и pdoTools3.
